apps/public/kochen.mitschen.de/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kochen
  namespace: svc-kochen
  labels: { app: kochen }
spec:
  replicas: 2
  selector: { matchLabels: { app: kochen } }
  template:
    metadata: { labels: { app: kochen } }
    spec:
      serviceAccountName: kochen-sa
      imagePullSecrets:
        - name: ghcr-cred
      containers:
        - name: web
          image: ghcr.io/fabianliske/kochenmitschen:latest
          imagePullPolicy: IfNotPresent
          ports: [{ name: http, containerPort: 80 }]
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits:   { cpu: 500m, memory: 256Mi }
          readinessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: http }
            initialDelaySeconds: 15
            periodSeconds: 20
